// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.set.yield.acceptance given: [case1] route.stone.set --as rewound --yield drop when: [t0] stone has yield file then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ cascade
   │  ├─ 1.vision
   │  │  ├─ cleared: 0 reviews, 0 judges, 0 promises, 0 triggers, 1 yield
   │  │  └─ passage: rewound
   │  ├─ 2.criteria
   │  │  ├─ cleared: 0 reviews, 0 judges, 0 promises, 0 triggers
   │  │  └─ passage: rewound
   │  └─ 3.plan
   │     ├─ cleared: 0 reviews, 0 judges, 0 promises, 0 triggers
   │     └─ passage: rewound
   └─ done
"
`;

exports[`driver.route.set.yield.acceptance given: [case1] route.stone.set --as rewound --yield drop when: [t1] stone has no yield file then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ cascade
   │  ├─ 1.vision
   │  │  ├─ cleared: 0 reviews, 0 judges, 0 promises, 0 triggers
   │  │  └─ passage: rewound
   │  ├─ 2.criteria
   │  │  ├─ cleared: 0 reviews, 0 judges, 0 promises, 0 triggers
   │  │  └─ passage: rewound
   │  └─ 3.plan
   │     ├─ cleared: 0 reviews, 0 judges, 0 promises, 0 triggers
   │     └─ passage: rewound
   └─ done
"
`;

exports[`driver.route.set.yield.acceptance given: [case2] route.stone.set --as rewound --yield keep when: [t0] stone has yield file then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ cascade
   │  ├─ 1.vision
   │  │  ├─ cleared: 0 reviews, 0 judges, 0 promises, 0 triggers
   │  │  └─ passage: rewound
   │  ├─ 2.criteria
   │  │  ├─ cleared: 0 reviews, 0 judges, 0 promises, 0 triggers
   │  │  └─ passage: rewound
   │  └─ 3.plan
   │     ├─ cleared: 0 reviews, 0 judges, 0 promises, 0 triggers
   │     └─ passage: rewound
   └─ done
"
`;

exports[`driver.route.set.yield.acceptance given: [case3] route.stone.set --as rewound (default yield) when: [t0] no yield flag provided then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ cascade
   │  ├─ 1.vision
   │  │  ├─ cleared: 0 reviews, 0 judges, 0 promises, 0 triggers
   │  │  └─ passage: rewound
   │  ├─ 2.criteria
   │  │  ├─ cleared: 0 reviews, 0 judges, 0 promises, 0 triggers
   │  │  └─ passage: rewound
   │  └─ 3.plan
   │     ├─ cleared: 0 reviews, 0 judges, 0 promises, 0 triggers
   │     └─ passage: rewound
   └─ done
"
`;

exports[`driver.route.set.yield.acceptance given: [case4] route.stone.set --as rewound --hard (alias) when: [t0] --hard archives yield then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ cascade
   │  ├─ 1.vision
   │  │  ├─ cleared: 0 reviews, 0 judges, 0 promises, 0 triggers, 1 yield
   │  │  └─ passage: rewound
   │  ├─ 2.criteria
   │  │  ├─ cleared: 0 reviews, 0 judges, 0 promises, 0 triggers
   │  │  └─ passage: rewound
   │  └─ 3.plan
   │     ├─ cleared: 0 reviews, 0 judges, 0 promises, 0 triggers
   │     └─ passage: rewound
   └─ done
"
`;

exports[`driver.route.set.yield.acceptance given: [case5] route.stone.set --as rewound --soft (alias) when: [t0] --soft preserves yield then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ cascade
   │  ├─ 1.vision
   │  │  ├─ cleared: 0 reviews, 0 judges, 0 promises, 0 triggers
   │  │  └─ passage: rewound
   │  ├─ 2.criteria
   │  │  ├─ cleared: 0 reviews, 0 judges, 0 promises, 0 triggers
   │  │  └─ passage: rewound
   │  └─ 3.plan
   │     ├─ cleared: 0 reviews, 0 judges, 0 promises, 0 triggers
   │     └─ passage: rewound
   └─ done
"
`;

exports[`driver.route.set.yield.acceptance given: [case6] cascade yield drop affects multiple stones when: [t0] rewind stone 2 with yield drop cascades to stone 3 then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 2.criteria
   ├─ cascade
   │  ├─ 2.criteria
   │  │  ├─ cleared: 0 reviews, 0 judges, 0 promises, 0 triggers, 1 yield
   │  │  └─ passage: rewound
   │  └─ 3.plan
   │     ├─ cleared: 0 reviews, 0 judges, 0 promises, 0 triggers, 1 yield
   │     └─ passage: rewound
   └─ done
"
`;

exports[`driver.route.set.yield.acceptance given: [case7] validation errors for flag conflicts when: [t0] --hard and --soft together then: stderr matches snapshot 1`] = `
"error: BadRequestError: --hard and --soft are mutually exclusive

{
  "hint": "--help for usage"
}
"
`;

exports[`driver.route.set.yield.acceptance given: [case7] validation errors for flag conflicts when: [t1] --hard and --yield keep together then: stderr matches snapshot 1`] = `
"error: BadRequestError: --hard conflicts with --yield keep

{
  "hint": "--help for usage"
}
"
`;

exports[`driver.route.set.yield.acceptance given: [case7] validation errors for flag conflicts when: [t2] --soft and --yield drop together then: stderr matches snapshot 1`] = `
"error: BadRequestError: --soft conflicts with --yield drop

{
  "hint": "--help for usage"
}
"
`;

exports[`driver.route.set.yield.acceptance given: [case7] validation errors for flag conflicts when: [t3] yield flags on non-rewound action then: stderr matches snapshot 1`] = `
"error: BadRequestError: --yield, --hard, and --soft are only valid with --as rewound

{
  "hint": "--help for usage"
}
"
`;

exports[`driver.route.set.yield.acceptance given: [case8] yield with multiple yield file extensions when: [t0] stone has .yield, .yield.md, and .yield.json then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ cascade
   │  ├─ 1.vision
   │  │  ├─ cleared: 0 reviews, 0 judges, 0 promises, 0 triggers, 1 yield
   │  │  └─ passage: rewound
   │  ├─ 2.criteria
   │  │  ├─ cleared: 0 reviews, 0 judges, 0 promises, 0 triggers
   │  │  └─ passage: rewound
   │  └─ 3.plan
   │     ├─ cleared: 0 reviews, 0 judges, 0 promises, 0 triggers
   │     └─ passage: rewound
   └─ done
"
`;
